--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@angular-package/change-detection": "^1.0.0",
     "@angular/animations": "8.0.2",
+    "@angular/cdk": "~8.0.2",
     "@angular/common": "8.0.2",
     "@angular/compiler": "8.0.2",
     "@angular/core": "8.0.2",
     "@angular/forms": "8.0.2",
     "@angular/http": "^7.2.15",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "8.0.2",
     "@angular/platform-browser-dynamic": "8.0.2",
     "@angular/router": "8.0.2",
