--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "private": true,
   "dependencies": {
     "@angular-package/change-detection": "^1.0.0",
-    "@angular/animations": "8.0.2",
-    "@angular/cdk": "~8.0.2",
+    "@angular/animations": "^8.0.2",
+    "@angular/cdk": "^8.1.0",
     "@angular/common": "8.0.2",
     "@angular/compiler": "8.0.2",
     "@angular/core": "8.0.2",
@@ -25,16 +25,24 @@
     "@angular/platform-browser": "8.0.2",
     "@angular/platform-browser-dynamic": "8.0.2",
     "@angular/router": "8.0.2",
+    "@fullcalendar/core": "^4.2.0",
+    "@fullcalendar/daygrid": "^4.2.0",
+    "@fullcalendar/interaction": "^4.2.0",
+    "@fullcalendar/timegrid": "^4.2.0",
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
     "@ngx-prism/core": "^2.0.1",
     "@types/prismjs": "^1.9.0",
     "buttercms": "^1.1.4",
+    "chart.js": "^2.8.0",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.24.0",
     "ng2-nouislider": "1.7.13",
     "nouislider": "13.1.3",
     "popper.js": "1.14.7",
+    "primeicons": "^1.0.0",
+    "primeng": "^8.0.1",
     "prismjs": "^1.9.0",
+    "quill": "^1.3.6",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.4.0",
     "zone.js": "~0.9.1"
